# vidscribe

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  skill.md
docs/plans/: 2026-05-06-mvp-pipeline.md
docs/plans/completed/: 2026-05-06-mvp-pipeline.md
src/vidscribe/: __init__.py  assembler.py  audio.py  cache.py  chunker.py  cli.py  config.py  edit.py  frames.py  logging_setup.py  paths.py  pipeline.py  progress.py  provider.py  speakers.py  stt.py
src/vidscribe/prompts/: __init__.py  correct_chunk.md  correct_chunk_text.md  correct_chunk_visual.md  identify_speakers.md
tests/: conftest.py  test_assembler.py  test_audio.py  test_cache.py  test_chunker.py  test_cli.py  test_config.py  test_edit.py  test_frames.py  test_logging_setup.py  test_paths.py  test_pipeline.py  test_progress.py  test_prompts.py  test_provider.py  test_smoke.py  test_speakers.py  test_stt.py
